<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.csbgroup.myphr.MedicineSettings">

    <TextView
        android:id="@+id/reminder_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reminder_type" />

    <RadioGroup
        android:id="@+id/reminder_type_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/reminder_type">

        <RadioButton
            android:id="@+id/reminder_type1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descriptive" />

        <RadioButton
            android:id="@+id/reminder_type2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/general" />
    </RadioGroup>

    <TextView
        android:id="@+id/remind_when"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remind_when"
        android:layout_below="@id/reminder_type_buttons"/>

    <RadioGroup
        android:id="@+id/remind_when_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/remind_when">

        <RadioButton
            android:id="@+id/reminder1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_1_hour_prior" />

        <RadioButton
            android:id="@+id/reminder2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_20_minutes_prior" />

        <RadioButton
            android:id="@+id/reminder3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/at_dose_time" />
    </RadioGroup>

</RelativeLayout>
