<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.csbgroup.myphr.AppointmentsSettings">

    <TextView
        android:id="@+id/reminder_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/reminder_type"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/reminder_type_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/reminder_type"
        android:layout_marginStart="10dp">

        <RadioButton
            android:id="@+id/reminder_type1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descriptive" />

        <RadioButton
            android:id="@+id/reminder_type2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/general" />

    </RadioGroup>

    <TextView
        android:id="@+id/remind_when"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/reminder_type_buttons"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/remind_when"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/remind_when_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/remind_when"
        android:layout_marginStart="10dp">

        <RadioButton
            android:id="@+id/appt_reminder1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_2_weeks_prior" />

        <RadioButton
            android:id="@+id/appt_reminder2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_1_week_prior_" />

        <RadioButton
            android:id="@+id/appt_reminder3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_day_before" />

        <RadioButton
            android:id="@+id/appt_reminder4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_morning_of" />

    </RadioGroup>

</RelativeLayout>
