<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/med_title"
        android:text="@string/medtitle"
        android:textSize="20dp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingLeft="10dp"
        android:background="@color/colorAccent" />

    <TextView
        android:id="@+id/med_message"
        android:text="@string/medmessage"
        android:textSize="16dp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:paddingLeft="10dp"
        android:background="@color/colorAccent"/>

    <EditText
        android:id="@+id/med_name"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="8dp"
        android:inputType="textCapWords"
        android:scrollbars="horizontal"
        android:hint="@string/medname"/>

    <EditText
        android:id="@+id/med_description"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="8dp"
        android:inputType="phone"
        android:scrollbars="horizontal"
        android:hint="@string/meddescription"/>

    <EditText
        android:id="@+id/med_dose"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="8dp"
        android:inputType="text"
        android:scrollbars="horizontal"
        android:hint="@string/meddose"/>

    <EditText
        android:id="@+id/med_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:inputType="textMultiLine"
        android:lines="2"
        android:scrollbars="vertical"
        android:hint="@string/mednotes"/>

    <TextView
        android:id="@+id/med_message2"
        android:text="@string/medmessage2"
        android:textSize="16dp"
        android:textColor="#545454"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"/>

</LinearLayout>